# navign

./: .gitignore  .ls-lint.yml  .oxfmtignore  .oxfmtrc.jsonc  .oxlintrc.json  .oxlintrc.jsonc  .prettierrc  .typos.toml  CHANGELOG_2025-11-16.md  CLAUDE.md  Cargo.toml  FEATURE_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  LICENSE  MIGRATION_MONGODB_TO_POSTGRESQL.md  OBJECTID_TO_STRING_MIGRATION.md  OTA_ANALYSIS.md  PRESENTATION_OUTLINE.md  QUICK_START.md  README.md  REFACTORING_PLAN.md  TEST_COVERAGE_SUMMARY.md  beacon.py  calibrate.py  debug.txt  debug2.txt  debug3.txt  deny.toml  detection.py  finger.py  gesture.py  go.work  go.work.sum  hello.py  hello2.py  intro.py  justfile  justfile.patch  local.py  localize.py  (+21 more)
admin/maintenance/: .gitignore  Cargo.toml  README.md  build.rs  generate_proto.sh  pyproject.toml
admin/maintenance/navign_maintenance/: grpc_client.py
admin/maintenance/proto/: __init__.py
admin/maintenance/src/: cli.py  crypto.py  esp_tools.py  lib.rs  main.rs  models.py
admin/maintenance/tests/: conftest.py  integration_tests.rs  test_crypto.py  test_esp_tools.py  test_models.py
admin/maintenance_py/: README.md  generate_proto.sh  pyproject.toml
admin/maintenance_py/navign_maintenance/: __init__.py  cli.py  esp_tools.py  grpc_client.py  models.py
admin/maintenance_py/tests/: __init__.py  conftest.py  test_crypto.py  test_esp_tools.py  test_models.py
admin/orchestrator/: Cargo.toml  build.rs
admin/orchestrator/src/: error.rs  firmware_api.rs  grpc_service.rs  lib.rs  main.rs  robot_registry.rs  task_queue.rs  test_utils.rs  types.rs
admin/orchestrator/tests/: firmware_api_tests.rs
admin/plot/: .gitignore  README.md  client.py  generate_proto.sh  plot_client.py  pyproject.toml  server.py
admin/plot/proto/: plot.proto  plot_pb2.py  plot_pb2.pyi  plot_pb2_grpc.py  task_pb2.py  task_pb2.pyi  task_pb2_grpc.py
admin/plot/tests/: __init__.py  conftest.py  test_grpc_service.py  test_hello.py  test_plot_client.py  test_proto.py
beacon/: .gitignore  Cargo.toml  OTA_INTEGRATION.md
beacon/.cargo/: config.toml
beacon/.github/workflows/: lint.yml
beacon/tests/: unit-tests.rs
firmware/: Cargo.toml  README.md  TESTING.md  partitions.csv
firmware/tests/: README.md  crypto_tests.rs  nonce_tests.rs  qemu_runner.sh  rate_limit_tests.rs  unit-tests.rs
firmware/tests/mocks/: gpio.rs  mod.rs  rng.rs  storage.rs
gesture_space/: .gitignore  finger.py  gesture.py  local.py  locate.py  main.py  pyproject.toml  recognition.py  shared.py  transform.py  waking.py
gesture_space/tests/: test_gesture_space.py
mobile/src-tauri/: Cargo.toml  sqlx.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json  mobile.json
mobile/src-tauri/migrations/: 01_navign.sql  20251011164819_draft.sql
mobile/src-tauri/src/: lib.rs  libconstants.rlib  navign.sql  navign_v2.sql  navign_v3.sql  shared.rs
robot/audio/: README.md  audio_pb2.py  audio_pb2.pyi  common_pb2.py  config.example.py  example_usage.py  play.py  pyproject.toml  service.py
robot/audio/tests/: __init__.py
robot/firmware/: Cargo.toml  Embed.toml  build.rs  rust-toolchain.toml
robot/firmware/.cargo/: config.toml
robot/firmware/src/: main.rs
robot/network/: Cargo.toml  build.rs
robot/network/src/: main.rs
robot/scheduler/: Cargo.toml  build.rs
robot/scheduler/src/: database.rs  main.rs  task_manager.rs  zenoh_client.rs
robot/serial/: Cargo.toml  build.rs
robot/serial/src/: main.rs
robot/vision/: .gitignore  CMakeLists.txt  DEPENDENCIES.md  README.md  calibrate.py  common_pb2.pyi  config.example.py  example_usage.py  objects.py  pyproject.toml  service.py  vision_pb2.py  vision_pb2.pyi
robot/vision/include/: apriltag_detector.hpp  camera_calibration.hpp  coordinate_transform.hpp  object_detector.hpp  vision_service.hpp
robot/vision/scripts/: build.sh
robot/vision/src/: apriltag_detector.cpp  camera_calibration.cpp  coordinate_transform.cpp  main.cpp  object_detector.cpp  vision_service.cpp
server/: .env.example  .gitignore  Cargo.toml  FEATURES.md  LICENSE  POSTGRESQL_HANDLERS_SUMMARY.md  README.md  TESTING.md  TRIANGULATION.md
server/.github/workflows/: unit_test.yml
server/examples/: triangulation_demo.rs
server/migrations/: 001_initial_schema.sql  002_add_postgis.sql  20250109000001_initial_schema.sql
server/scripts/: migrate.sh
server/src/: database.rs  error.rs  key_management.rs  lib.rs  main.rs  metrics.rs  rate_limiting.rs  shared.rs  state.rs
server/src/handlers/: area.rs  beacon.rs  entity.rs  merchant.rs  mod.rs
server/src/kernel/: cryptography.rs  mod.rs  route.rs  totp.rs  unlocker.rs
server/src/pg/: PG_HANDLERS_README.md  adapters.rs  auth_handlers.rs  handlers.rs  impls.rs  mod.rs  models.rs  pool.rs  repository.rs  route_handlers.rs
server/src/schema/: area.rs  beacon.rs  beacon_secrets.rs  connection.rs  entity.rs  firmware.rs  merchant.rs  metadata.rs  mod.rs  service.rs  user.rs  user_public.rs
server/tests/: README.md  api_integration_test.rs  database_test.rs  health_tests.rs  rate_limiting_tests.rs  schema_test.rs
server/tests/common/: mod.rs
server/ts-schema/: area.d.ts  beacon.d.ts  connection.d.ts  entity.d.ts  index.d.ts  merchant.d.ts
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs
shared/src/ble/: blufi.rs  challenge.rs  device_caps.rs  device_type.rs  message.rs  mod.rs  nonce.rs  proof.rs
shared/src/errors/: crypto.rs  mod.rs
shared/src/pathfinding/: inner_area.rs  inter_area.rs  mod.rs  polygon.rs
shared/src/robot/: mod.rs  motion.rs
shared/src/schema/: account.rs  area.rs  beacon.rs  beacon_secrets.rs  blufi.rs  connection.rs  entity.rs  firmware.rs  (+10 more)
src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/migrations/: 20251011164819_draft.sql
src-tauri/src/: lib.rs  navign.sql  shared.rs
ts-schema/: .gitattributes  Cargo.toml  README.md  area.d.ts  browser.js  connection.d.ts  index.js  package.json  pnpm-lock.yaml  ts-schema.wasi-browser.js  ts-schema.wasi.cjs
ts-schema/benchmark/: bench.ts
ts-schema/src/: lib.rs
(+444 files in other folders)
