[workspace]
resolver = "2"

members = [
  "firmware",
  "server",
  "mobile/src-tauri",
  "shared",
  "admin/orchestrator",
  "robot/firmware",
  "robot/scheduler",
  "robot/network",
  "robot/serial",
]

# Exclude members from default workspace builds if needed
# This is useful since firmware needs special cross-compilation
default-members = [
  "shared",
]

  [workspace.package]
  edition = "2024"
  license = "MIT"
  version = "0.1.0"

  [workspace.dependencies]


[profile.dev.package.navign-firmware]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release.package.navign-firmware]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 's'
overflow-checks  = false

[profile.release.package.navign-robot-firmware]
debug = 2
