[project]
dependencies    = []
description     = "Add your description here"
name            = "navign"
readme          = "README.md"
requires-python = ">=3.12"
version         = "0.1.0"

[tool.uv.sources]

[tool.uv.workspace]
members = ["admin/plot", "robot/audio", "robot/intelligence", "scripts"]
