[package]
name = "navign-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["default", "macros"] }
base64 = "0.22.1"
bson = { version = "3.0.0" }
chrono = "0.4.41"
dotenv = "0.15.0"
log = { version = "0.4.27", features = ["max_level_info", "serde", "std"] }
mongodb = { version = "3.3.0", features = ["bson-3"] }
serde = "1.0.219"
serde_json = "1.0.143"
simple_logger = "5.0.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
futures = "0.3.31"
state = "0.6.0"
hmac = "0.12.1"
sha1 = "0.10.6"
bcrypt = "0.17.1"
lazy_static = "1.5.0"
uuid = { version = "1.18.1", features = ["v4"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
sha2 = "0.10.9"
rsa = "0.9.8"
serde-big-array = "0.5.1"
hex = "0.4.3"
oauth2 = "5.0.0"
reqwest = "0.12.23"
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
gravatar = "0.2.0"
bumpalo = { version = "3.18", features = ["collections", "boxed", "serde"] }
bumpalo-herd = "0.1.2"
wkt = { version = "0.14.0", features = ["serde"] }
rand = "0.9.2"
axum-extra = { version = "0.10.3", features = [
  "typed-header",
  "typed-routing",
] }
tower_governor = "0.8.0"
navign-shared = { path = "../shared", default-features = false, features = [
  "std",
  "serde",
  "mongodb",
] }

[dev-dependencies]
tempfile = "3.17.0"
