[package]
edition.workspace = true
license.workspace = true
name              = "navign-server"
version.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["default", "macros", "multipart"] }
axum-extra = { version = "0.12.2", features = [
  "typed-header",
  "typed-routing",
] }
base64 = "0.22.1"
bcrypt = "0.17.1"
bson = { version = "2.15.0" }
bumpalo = { version = "3.18", features = ["collections", "boxed", "serde"] }
bumpalo-herd = "0.1.2"
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
geo = { version = "0.29.3", features = ["use-serde"] }
gravatar = "0.2.0"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
mongodb = { version = "3.3.0" }
navign-shared = { path = "../shared", default-features = false, features = [
  "std",
  "serde",
  "mongodb",
  "geo",
  "postgres",
] }
oauth2 = "5.0.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand = "0.9.2"
reqwest = "0.12.23"
rsa = "0.9.8"
serde = "1.0.219"
serde-big-array = "0.5.1"
serde_json = "1.0.143"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "migrate",
] }
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
totp-lite = "2.0.1"
tower-http = { version = "0.6.6", features = ["cors"] }
tower_governor = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }
wkt = { version = "0.14.0", features = ["serde"] }

[dev-dependencies]
env_logger = "0.11"
tempfile   = "3.17.0"
tower      = { version = "0.5", features = ["util"] }
