[package]
edition.workspace = true
license.workspace = true
name              = "navign-shared"
version.workspace = true

[features]
alloc = [
  "serde?/alloc",
  "heapless?/alloc",
  "defmt?/alloc",
  "chrono?/alloc",
  "base64?/alloc",
  "p256?/alloc",
  "serde_with?/alloc",
  "postcard?/alloc",
]
base64 = ["dep:base64", "alloc"]
chrono = ["dep:chrono"]
crypto = ["dep:sha2", "dep:hmac", "dep:p256"]
default = ["std"]
defmt = ["dep:defmt"]
heapless = ["dep:heapless", "postcard?/heapless"]
mongodb = ["alloc", "serde", "dep:bson"]
postcard = ["dep:postcard", "serde"]
serde = [
  "dep:serde",
  "serde/derive",
  "dep:serde-big-array",
  "heapless?/serde",
  "chrono?/serde",
  "bitflags/serde",
  "p256?/serde",
  "dep:serde_with",
  "serde_with?/macros",
  "geo?/serde",
]
sql = ["std", "serde", "dep:sqlx", "dep:async-trait"]
postgres = ["std", "serde", "dep:sqlx", "dep:async-trait", "sqlx?/postgres", "sqlx?/uuid", "sqlx?/chrono", "sqlx?/json", "dep:uuid", "dep:serde_json", "dep:geo-types", "chrono"]
std = [
  "serde?/std",
  "chrono?/std",
  "alloc",
  "bitflags/std",
  "base64?/std",
  "hmac?/std",
  "serde_with?/std",
]
geo = ["dep:geo", "alloc"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
base64 = { version = "0.22.1", optional = true, default-features = false }
bitflags = "2.10.0"
bson = { version = "2.15.0", optional = true, features = ["serde_with"] }
chrono = { version = "0.4.42", optional = true, default-features = false }
defmt = { version = "1.0.1", optional = true }
geo = { version = "0.29.3", optional = true, features = ["use-serde"] }
heapless = { version = "0.9.1", optional = true }
hmac = { version = "0.12.1", optional = true, default-features = false }
p256 = { version = "0.13.2", optional = true, default-features = false, features = [
  "ecdsa",
] }
postcard = { version = "1.0", optional = true, default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
serde-big-array = { version = "0.5.1", optional = true }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
serde_with = { version = "3.15.1", optional = true, default-features = false }
sha2 = { version = "0.10.9", optional = true, default-features = false }
sqlx = { version = "0.8.6", optional = true, default-features = false, features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
uuid = { version = "1.18.1", optional = true, features = ["v4", "serde"] }
geo-types = { version = "0.7", optional = true, features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
