[package]
name = "mobile"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1"
tauri-plugin-blec = "0.8.1"
tauri-plugin-http = { version = "2", features = ["json"] }
tauri-plugin-geolocation = "2"
p256 = { version = "0.13.2", features = ["ecdsa"] }
sha2 = "0.10.9"
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.99"
base64 = "0.22.1"
rsa = "0.9.8"
chrono = "0.4.42"
serde-big-array = "0.5.1"
digest = { version = "0.10.7", features = ["mac", "std"] }
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["std", "os_rng"] }
tokio = { version = "1.47.1", features = ["sync"] }
tauri-plugin-notification = "2"
tauri-plugin-stronghold = "2"
nanoid = "0.4.0"
hex = "0.4.3"
uuid = { version = "1.18.0", features = ["v4"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "runtime-tokio-native-tls"] }
futures-util = "0.3.31"
wkt = { version = "0.14.0", features = ["serde"] }
itertools = "0.14.0"
tauri-plugin-store = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
tauri-plugin-nfc = "2"
#tauri-plugin-gyroscope = { path = "../../tauri-plugin-gyroscope" }
