[package]
authors           = ["Ethan Wu"]
edition.workspace = true
license.workspace = true
name              = "navgin-ts-schema"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
navign-shared = { path = "../shared", features = ["std", "serde", "alloc", "ts-rs"] }
ts-rs = "10.0.0"
