[package]
edition.workspace = true
license.workspace = true
name              = "navign-maintenance"
version.workspace = true

[dependencies]
anyhow       = "1.0.100"
chrono       = "0.4.42"
clap         = { version = "4.5.48", features = ["derive"] }
hex          = "0.4.3"
p256         = { version = "0.13.2", features = ["ecdsa"] }
pem          = "3.0.6"
prost        = "0.13"
prost-types  = "0.13"
rand         = "0.9.2"
serde        = { version = "1.0.226", features = ["derive"] }
serde_json   = "1.0.145"
tokio        = { version = "1.47.1", features = ["full"] }
tonic        = "0.12"
which        = "8.0.0"

[build-dependencies]
tonic-build = "0.12"
