[package]
edition.workspace = true
license.workspace = true
name              = "orchestrator"
version.workspace = true

[dependencies]
env_logger = "0.11"
log = "0.4"
prost = "0.13"
tokio = { version = "1.43", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-stream = "0.1"
tonic = "0.12"
uuid = { version = "1.11", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
