[package]
edition.workspace = true
license.workspace = true
name              = "navign-orchestrator"
version.workspace = true

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
env_logger = "0.11"
log = "0.4"
navign-shared = { path = "../../shared", default-features = false, features = [
  "std",
  "serde",
  "alloc",
] }
prost = "0.13"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "fs",
] }
tokio-stream = "0.1"
thiserror = "2.0"
tonic = "0.12"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.11", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
