[package]
edition.workspace = true
license.workspace = true
name              = "navign-robot-firmware"
version.workspace = true

[dependencies]
alloc-cortex-m = "0.4.4"
chrono = { version = "^0.4", default-features = false }
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
defmt = { version = "1.0.1" }
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-stm32 = { version = "0.4.0", features = [
  "defmt",
  "stm32f407zg",
  "unstable-pac",
  "memory-x",
  "time-driver-tim4",
  "exti",
  "chrono",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }


  [package.metadata.embassy]
  build = [
    { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/stm32f4" },
  ]
