[package]
edition.workspace = true
license.workspace = true
name              = "navign-robot-network"
version.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Zenoh for pub/sub
zenoh = { version = "1.6.2", features = ["default"] }

# Protocol Buffers
prost       = "0.14.1"
prost-types = "0.14.1"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow    = "1.0"
thiserror = "1.0"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.14.1"
