[package]
edition.workspace = true
license.workspace = true
name              = "scheduler"
version.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Zenoh for pub/sub and RPC
zenoh = { version = "1.6.2", features = ["default"] }

# Protocol Buffers
prost       = "0.13"
prost-types = "0.13"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLite for local task storage)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Error handling
anyhow    = "1.0"
thiserror = "1.0"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

[build-dependencies]
prost-build = "0.13"
